--- a/articulo.html
+++ b/articulo.html
@@ -6,7 +6,13 @@
         <link rel="stylesheet" type="" href="css/estilos.css">
     </head>
     <body>
-        <h1> Aqui vamos hacer el blog del post </h1>
-        <p> Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1> Este es el titulo atractivo e interactivo del post </h1>
+                <p> Y este es el parrafo de inicio donde  vamos a explicar 
+                    las cosas increibles
+                </p> 
+            </div>
+        </div>
     </body>
 </html>
