--- a/articulo.html
+++ b/articulo.html
@@ -12,6 +12,11 @@
                 <p> Y este es el parrafo de inicio donde  vamos a explicar 
                     las cosas increibles
                 </p> 
+                <p>Los blogs son la mejor forma de compartir información
+                    y tus ideas. Mucho mas que ir a conferencias o salir en Youtobe.
+                    Excepto si eres un RockStar. Pero estadisticamente no lo eres... 
+                    por ahora.
+                </p>
             </div>
         </div>
     </body>
