Agregue suscripción, cambie cabecera maestra y todo azul

--- a/articulo.html
+++ b/articulo.html
@@ -9,7 +9,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1> Este es el titulo atractivo e interactivo del post </h1>
@@ -21,6 +21,7 @@
                     Excepto si eres un RockStar. Pero estadisticamente no lo eres... 
                     por ahora.
                 </p>
+                <p>Subscribete y dale like</p>
             </div>
         </div>
     </body>
