--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del Post
+        <title>Bienvenido a Hyperblog
         </title>
 
         <link rel="stylesheet" type="" href="css/estilos.css">
