--- a/articulo.html
+++ b/articulo.html
@@ -23,6 +23,9 @@
                 </p>
                 <p>Subscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho por Jeferson Diaz
+            </div>
         </div>
     </body>
 </html>
