--- a/articulo.html
+++ b/articulo.html
@@ -14,8 +14,8 @@
             </div>
             <div id="post">
                 <h1> Este es el titulo atractivo e interactivo del post </h1>
-                <p> Y este es el parrafo de inicio donde  vamos a explicar 
-                    las cosas increibles
+                <p> Y este es el párrafo de inicio donde  vamos a explicar 
+                    las cosas increíbles
                 </p> 
                 <p>Los blogs son la mejor forma de compartir información
                     y tus ideas. Mucho mas que ir a conferencias o salir en Youtobe.
