Cambio de titulo

--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0
+        <title>Hyperblog 2.0 es un blog del futuro
         </title>
 
         <link rel="stylesheet" type="" href="css/estilos.css">
